--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,29 @@
+# Webserver ports
+quarkus.http.port=${PORT:8080}
+
 # Database configurations
 quarkus.datasource.db-kind = postgresql
-quarkus.datasource.username = postgres
-quarkus.datasource.password = postgres
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/postgres
+quarkus.datasource.username = ${DB_JDBC_USER:postgres}
+quarkus.datasource.password = ${DB_JDBC_PASSWORD:postgres}
+quarkus.datasource.jdbc.url = ${DB_JDBC_URL:jdbc:postgresql://localhost:5432/postgres}
+
+
 
 # drop and create the database at startup (use `update` to only update the schema)
-##quarkus.hibernate-orm.database.generation = update
-quarkus.hibernate-orm.database.generation = drop-and-create
+#quarkus.hibernate-orm.database.generation = update
+#quarkus.hibernate-orm.database.generation = drop-and-create
 quarkus.hibernate-orm.log.sql=true
 
+# OpenAPI configurations
 quarkus.swagger-ui.always-include=true
+quarkus.smallrye-openapi.info-title=Finance Programs API
+%dev.quarkus.smallrye-openapi.info-title=Finance Programs API (development)
+%test.quarkus.smallrye-openapi.info-title=Finance Programs API (test)
+quarkus.smallrye-openapi.info-version=1.0.1
+quarkus.smallrye-openapi.info-description=Finance Programs systems
+quarkus.smallrye-openapi.info-terms-of-service=Your terms here
+quarkus.smallrye-openapi.info-contact-email=claudioed.oliveira@gmail.com
+quarkus.smallrye-openapi.info-contact-name=Example API Support
+quarkus.smallrye-openapi.info-contact-url=http://exampleurl.com/contact
+quarkus.smallrye-openapi.info-license-name=Apache 2.0
+quarkus.smallrye-openapi.info-license-url=https://www.apache.org/licenses/LICENSE-2.0.html
