--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ quarkus.datasource.jdbc.url = ${DB_JDBC_URL:jdbc:postgresql://localhost:5432/pos
 
 
 # drop and create the database at startup (use `update` to only update the schema)
-#quarkus.hibernate-orm.database.generation = update
+quarkus.hibernate-orm.database.generation = update
 #quarkus.hibernate-orm.database.generation = drop-and-create
 quarkus.hibernate-orm.log.sql=true
 
